src/tests/compile_fail/shadow.gab
let a = 2

let a, b = 3, 4
